@@ -6,22 +6,92 @@ NAME
 Joose.Manual.Installation - The installation procedure for Joose.
 
 
-JSAN
-====
+DESCRIPTION
+===========
 
-`Joose` is distributing via JSAN - [JavaScript Archive Network][jsan]. To install `Joose` you'll need to install JSAN shell first - a small,
-cross-platform, unix-shell-like program. It communicate directly with closest JSAN mirror and can download and install any JSAN module for you.
+You can install Joose from the following sources:
+
+ 
+INSTALLING FROM TARBALL
+=======================
+
+The complete list of the released tarballs is available for download here: <http://openjsan.org/go?d=Joose>
+
+
+Source files to include
+-----------------------
+
+To use Joose include the following source file in your project (from the root of the tarball)
+
+    lib/Task/Joose/Core.js
+
+It contains all the individual source files concatenated into one.
+
+
+
+INSTALLING FROM `npm`
+=====================
+
+If you are on Linux box and planning to use Joose only for server-side code, then the most straightforward way will be to use `npm` package manager.
+
+1. Installing `npm`
+
+Please refer to : <http://github.com/isaacs/npm/>
+
+2. Installing `Joose`
+
+        > npm install joose
+
+You probably will need to `sudo` the command above.
+
+After this you can use Joose as follows:
+
+        require('joose')
+        
+        Class('My.Class', {
+        
+            methods : {
+                ...
+            }
+        })
+        
+        // or 
+        
+        var Class = require('joose').Class
+        
+        
+        var MyClass = Class({
+        
+            methods : {
+                ...
+            }
+        })
+
+Please note, that Joose aims to be client/server neutral, and behaves a bit differently than usual CommonJS module.  
+
+`require('joose')` will *modify the global scope* - will add the `Joose`, `Class`, `Role` and `Module` symbols to it.
+`Class`, `Role` and `Module` are also being exported from `require`. 
+
+
+INSTALLING FROM JSAN
+====================
+
+One more distrubution channel of `Joose` is JSAN - [JavaScript Archive Network][jsan]. Use this channel, if you are
+on Windows or planning to share Joose code unchanged between the browser/server.
+
+To install `Joose` you'll need to install JSAN shell first - a small, cross-platform, unix-shell-like program. 
+It communicate directly with closest JSAN mirror and can download and install any JSAN module for you.
 
 JSAN shell is written in perl, so the 1st step is to obtain Perl.
 
 
-1. OBTAINING PERL
-=================
+1. Obtaining perl
+-----------------
 
 Linux
 -----
 
-If you are on any relatively modern Linux distribution, you may skip this step, since you already have perl and all required perl modules. 
+If you are on any Linux distribution, you may skip this step, since you already have perl and all required perl modules. 
 
 
 Windows
@@ -32,18 +102,18 @@ Windows users should install [Strawberry perl][straberry]. Straberry perl is pre
 *NOTE:* After installation, you may need to relogin (or reboot) to see the updates in the PATH environment variable.
 
 
-2. INSTALLING SHELL
-===================
+2. Installing shell
+-------------------
 
-Launch a console (`cmd` on Windows). Then type:
+Launch a console (`cmd` on Windows). Then type (you may need to `sudo` this command):
 
        > cpan JSAN::Shell
     
 Thats all, now wait until shell will be installed. You may be asked about installing its pre-requisites - answer 'yes'. 
 
 
-3. INSTALLING `Joose`
-==========================
+3. Installing `Joose`
+---------------------
 
 Launch a console (`cmd` on Windows). Then type:
     
@@ -73,37 +143,33 @@ Thats all, shell will download and install `Joose` for you.
 For the list of available commands, try `help`. Also refer to [JSAN::Shell documentation](http://search.cpan.org/dist/JSAN-Shell/lib/JSAN/Shell.pm) for details. 
 
 
-4. CONFIGURING YOUR SYSTEM
-==========================
+4. Configuring your system
+--------------------------
 
 After successful completion of the procedure above, `Joose` will be installed in your local JavaScript library (you've specified its location with 'prefix').
 
 For example, the path to the library can be:
 
-- /usr/local/lib/jsan
+    /usr/local/lib/jsan
 
-on Linux systems
+on Linux systems, or
 
-- c:\JSAN
+    c:\JSAN
 
 on Windows systems.
 
-As a convention, its recommended to configure you local web server (you have one installed, right? ;) that way, that the root starting url `/jsan`
+As a convention, configure you local web server that way, that the url `http://localhost/jsan` 
 will point at the `lib` subdirectory of JSAN library: `/usr/local/lib/jsan/lib` for example.
 
-This way you can load any installed JSAN module via url like: `/jsan/Useful/Module/Name.js`
+This way you can load any installed JSAN module via url like: `http://localhost/jsan/Useful/Module/Name.js`
 
+Additionally, you may want to include the path to JSAN library to the `NODE_PATH` enviroment variable:
 
-5. SOURCE FILES TO INCLUDE
-==========================
+    export NODE_PATH=/usr/local/lib/jsan/lib
 
-To use Joose on your pages you'll need to include the following source file (from the root of the JSAN library)
-
-    /lib/Task/Joose/Core.js
-
-This file contains all the sources concatenated into one. 
-
-
+After this, you can load any installed JSAN module from the NodeJS, like:
+    
+    require('Useful/Module')
 
 
 AUTHOR
