@@ -7,9 +7,12 @@ Release history for Joose:
     - references to global RegExp object replaced with references to constructor of regexp instance,
       to allow the advanced optimizations with Google Closure optimizer (thanks to: sirrobert)
       
-    - Now its possible to inherit from non-Joose superclasses 
+    - now its possible to inherit from non-Joose superclasses 
         (see http://openjsan.org/go/?l=Joose.Manual.Classes for details)
     
+    - starting from this release, Joose will be also distributed via the `npm` package manager
+    
+    - updated Joose.Manual.Installation entry
     
     [API CHANGES]
 
